--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,20 +13,34 @@
 </head>
 
 <body>
-  <nav class="bg-emerald-800">
+  <nav class="bg-emerald-800 sticky top-0 z-[2]">
     <div class="container min-h-[90px] mx-auto px-4 py-2 flex justify-between items-center">
       <div>
         <h4>
           <a href="/" class="text-white text-2xl">StoreEVN</a>
         </h4>
       </div>
-      <div>
-        {% comment %} <div>
-          <svg viewBox="0 0 24 24" width="32" height="32">
-            <path d="M24,3H4.242L4.2,2.649A3,3,0,0,0,1.222,0H0V2H1.222a1,1,0,0,1,.993.883L3.8,16.351A3,3,0,0,0,6.778,19H20V17H6.778a1,1,0,0,1-.993-.884L5.654,15H21.836Z"/>
-            <circle cx="7" cy="22" r="2"/><circle cx="17" cy="22" r="2"/>
-          </svg>
-        </div> {% endcomment %}
+      <div class="flex items-center gap-8">
+        <!-- Cart start -->
+        <div>
+          <a href="{% url 'cart:cart_detail' %}" class="relative">
+            <span class="flex justify-center items-center absolute right-[-12px] top-[-12px] bg-red-600 leading-0 text-white text-[10px] w-5 h-5 rounded-full">
+              {% with cart_quantity=cart|length %}
+                {% if cart_quantity > 0 %}
+                  {{cart_quantity}}
+                {% else %}
+                  0
+                {% endif %}
+              {% endwith %}
+            </span>
+            <svg viewBox="0 0 24 24" width="24" height="24">
+              <path class="fill-white" d="M24,3H4.242L4.2,2.649A3,3,0,0,0,1.222,0H0V2H1.222a1,1,0,0,1,.993.883L3.8,16.351A3,3,0,0,0,6.778,19H20V17H6.778a1,1,0,0,1-.993-.884L5.654,15H21.836Z"/>
+              <circle class="fill-white" cx="7" cy="22" r="2"/>
+              <circle class="fill-white" cx="17" cy="22" r="2"/>
+            </svg>
+          </a>
+        </div>
+        <!-- Cart End -->
         <button data-mobileMenuBtn class="min-[768px]:hidden">
           <svg viewBox="0 0 490.667 490.667" width="24" height="24">
             <g class="fill-white">
@@ -53,7 +67,7 @@
             max-[768px]:bg-emerald-800
           "
         >
-          <ul class="flex gap-4 max-[768px]:flex-col max-[768px]:text-center">
+          <ul class="flex gap-4 z-40 max-[768px]:flex-col max-[768px]:text-center">
             <li>
               <a 
                 href="{% url 'main:index' %}" 
@@ -120,10 +134,8 @@
   </nav>
 
   <header>
-    <div>
-      {% block header %}
-      {% endblock header %}
-    </div>
+    {% block header %}
+    {% endblock header %}
   </header>
 
   {% block content %}
