--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,10 +1,9 @@
-{% extends "./base.html" %}
+{% extends './base.html' %}
 {% load static %}
-
 
 {% block title %}
   StoreEVN | Home Page
-{% endblock title %}
+{% endblock %}
 
 {% block slider_css %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -13,106 +12,69 @@
       background: #000;
     }
   </style>
-  {% endblock %}
-
+{% endblock %}
 
 {% block header %}
-  <div class="swiper">
+  <div class="swiper z-[1]">
     <div class="swiper-wrapper h-[500px]">
       {% for slide in sliders %}
         <div class="swiper-slide relative">
           <div class="w-full h-[500px]">
-            <img 
-              class="w-full h-[500px] object-cover" 
-              src="{{slide.image.url}}" 
-              alt="{{slide.name}}"
-            >
+            <img class="w-full h-[500px] object-cover" src="{{ slide.image.url }}" alt="{{ slide.name }}" />
           </div>
 
-          <div 
-            class="
-              absolute top-[180px] 
-              left-[180px] 
-              max-w-[568px] 
-              bg-black/75 
-              text-white 
-              p-8 
-              rounded-md
-              max-[768px]:left-[0px] 
-              max-[768px]:mx-8 
-              max-[768px]:top-[90px] 
-              max-[420px]:top-[16px] 
-            "
-          >
-            <h4 class="text-3xl font-bold mb-2">{{slide.name}}</h4>
-            <p class="">{{slide.descr}}</p>
+          <div class="absolute top-[180px] left-[180px] max-w-[568px] bg-black/75 text-white p-8 rounded-md max-[768px]:left-[0px] max-[768px]:mx-8 max-[768px]:top-[90px] max-[420px]:top-[16px]">
+            <h4 class="text-3xl font-bold mb-2">{{ slide.name }}</h4>
+            <p class="">{{ slide.descr }}</p>
           </div>
         </div>
       {% endfor %}
     </div>
     <div class="swiper-pagination"></div>
   </div>
-{% endblock header %}
-  
+{% endblock %}
 
 {% block content %}
   <main>
     <div class="container mx-auto px-4 py-2">
       <h2 class="text-4xl text-center my-8">Sale Products</h2>
       <div class="grid gap-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 my-4">
-        
-        {% for product in products  %}
+        {% for product in products %}
           <div class="p-4 bg-gray-100">
-            <a 
-              href="{{product.get_absolute_url}}"
-              class="block mb-2 max-w-full max-h-[248px] overflow-hidden"
-            >
+            <a href="{{ product.get_absolute_url }}" class="block mb-2 max-w-full max-h-[248px] overflow-hidden">
               {% if product.image %}
-                <img class="w-full h-full object-cover" src="{{product.image.url}}" alt="{{product.name}}">
+                <img class="w-full h-full object-cover" src="{{ product.image.url }}" alt="{{ product.name }}" />
               {% else %}
-                <img class="w-full h-full object-cover" src="https://thumb.ac-illust.com/b1/b170870007dfa419295d949814474ab2_t.jpeg" alt="{{product.name}}">
+                <img class="w-full h-full object-cover" src="https://thumb.ac-illust.com/b1/b170870007dfa419295d949814474ab2_t.jpeg" alt="{{ product.name }}" />
               {% endif %}
             </a>
-            <h3>
-              <a 
-                class="block text-lg text-blue-600 my-3 hover:text-blue-300 translation-color duration-300" 
-                href="{{product.get_absolute_url}}"
-              >
-                {{product.name}}
-              </a>
-            </h3>
-            <p>{{product.descr|truncatewords:10}}</p>
-            
+            <h3><a class="block text-lg text-blue-600 my-3 hover:text-blue-300 translation-color duration-300" href="{{ product.get_absolute_url }}">{{ product.name }}</a></h3>
+            <p>{{ product.descr|truncatewords:10 }}</p>
+
             {% if product.discount %}
-              <p class="line-through">$ {{product.price}}</p>
-              <p>$ {{product.discount_price}}</p>
+              <p class="line-through">$ {{ product.price }}</p>
+              <p>$ {{ product.discount_price }}</p>
             {% else %}
-              <p>$ {{product.price}}</p>
+              <p>$ {{ product.price }}</p>
             {% endif %}
 
-            <a 
-              class="block text-lg text-blue-600 mt-3 hover:text-blue-300 translation-color duration-300" 
-              href="{{product.get_absolute_url}}"
-            >
-              View Details
-            </a>
+            <a class="block text-lg text-blue-600 mt-3 hover:text-blue-300 translation-color duration-300" href="{{ product.get_absolute_url }}">View Details</a>
           </div>
         {% endfor %}
-          
       </div>
     </div>
   </main>
-{% endblock content %}
+{% endblock %}
 
 {% block slider_js %}
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
-    new Swiper(".swiper", {
+    new Swiper('.swiper', {
       loop: true,
       pagination: {
-        el: ".swiper-pagination",
+        el: '.swiper-pagination',
         clickable: true
-      },
-    });
+      }
+    })
   </script>
 {% endblock %}
