--- a/main/templates/main/shop.html
+++ b/main/templates/main/shop.html
@@ -6,7 +6,9 @@
 {% endblock title %}
 
 {% block header %}
-  <h1>Shop</h1>
+  <div class="container mx-auto px-4 py-2">
+    <h1 class="text-3xl my-4">Shop</h1>
+  </div>
 {% endblock header %}
 
 {% block content %}
