added postgresql to our project and created new apps - users & orders

--- a/main/templates/main/product-details.html
+++ b/main/templates/main/product-details.html
@@ -33,7 +33,7 @@
           {% csrf_token %}
           {{cart_product_form}}
         </div>
-        <input type="submit" class="block text-white mt-4 w-fit bg-gray-600 px-4 py-2" value="Add To Cart">
+        <input type="submit" class="block w-fit px-4 py-2 rounded-md mt-4 text-white bg-emerald-800 cursor-pointer" value="Add To Cart">
       </form>
     </div>
   </main>
