--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -25,7 +25,10 @@
                 {% endif %}
               </div>
               <h4 class="text-white mb-2">
-                <a href="{{product.get_absolute_url}}">
+                <a 
+                  href="{{product.get_absolute_url}}"
+                  class="underline"
+                >
                   {{product.name}}
                 </a>
               </h4>
