--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,7 @@
             </li>
           </ul>
           <div>
-            <a href="#" 
+            <a href="{% url 'users:login' %}" 
               class="
                 bg-emerald-600 
                 rounded-md px-4 
