--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,5 +1,7 @@
-{% extends "./base.html" %}
+{% extends "base.html" %}
 {% load static %}
+
+{% block title %} About {% endblock %}
 
 {% block header %}
   <div class="container mx-auto px-4 py-2">
