updated users, orders and cart apps, and created users and orders views, models and forms

--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -65,7 +65,7 @@
 
       {% with cart_quantity=cart|length  %}
         {% if cart_quantity > 0 %}
-          <a href="#" class="block w-fit px-4 py-2 rounded-md mt-4 text-white bg-emerald-800">Checkout</a>
+          <a href="{% url 'orders:order_create' %}" class="block w-fit px-4 py-2 rounded-md mt-4 text-white bg-emerald-800">Checkout</a>
         {% endif %}
       {% endwith %}
     </div>
