--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -10,5 +10,117 @@
 {% endblock header %}
 
 {% block content %}
-  <h1>Registration Content</h1>
+  <main>
+    <div class="container mx-auto px-4 py-2">
+      <form class="max-w-[580px]" action="{% url 'users:registration' %}" method="POST">
+        {% csrf_token %}
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>First Name:</span>
+          <input 
+            type="text"
+            name="first_name"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>Last Name:</span>
+          <input 
+            type="text"
+            name="last_name"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>Username:</span>
+          <input 
+            type="text"
+            name="username"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>Email:</span>
+          <input 
+            type="text"
+            name="email"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>Password:</span>
+          <input 
+            type="password"
+            name="password"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>Confirm Password:</span>
+          <input 
+            type="password"
+            name="confirm_password"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>Country:</span>
+          <input 
+            type="text"
+            name="country"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>City:</span>
+          <input 
+            type="text"
+            name="city"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>Address:</span>
+          <input 
+            type="text"
+            name="address"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <label class="flex mb-4 gap-2 justify-between items-center">
+          <span>Postal Code:</span>
+          <input 
+            type="text"
+            name="postal_code"
+            placeholder="Type here..."
+            required
+            class="px-4 py-2 border rounded-md"
+          >
+        </label>
+        <button
+          class="block w-fit px-4 py-2 rounded-md mt-4 text-white bg-emerald-800 cursor-pointer" 
+          type="submit"
+        > 
+          Create Account
+        </button>
+      </form>
+    </div>
+  </main>
 {% endblock content %}
