fixed registration issue

--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -58,7 +58,7 @@
           <span>Password:</span>
           <input 
             type="password"
-            name="password"
+            name="password1"
             placeholder="Type here..."
             required
             class="px-4 py-2 border rounded-md"
@@ -68,7 +68,7 @@
           <span>Confirm Password:</span>
           <input 
             type="password"
-            name="confirm_password"
+            name="password2"
             placeholder="Type here..."
             required
             class="px-4 py-2 border rounded-md"
